# StarLight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-all.yml  build-macos.yml  build-windows.yml  build.yml  product.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: GranularDelay.h  ShimmerReverb.h
Source/UI/: LockableButton.cpp  LockableButton.h  LockableSlider.cpp  LockableSlider.h  LookAndFeel.h  WaveformComponent.cpp  WaveformComponent.h
scripts/: build.ps1  build.sh  build_mac.sh  install_mac.sh
